fix: text vertical align

--- a/components/search-bar/style/index.scss
+++ b/components/search-bar/style/index.scss
@@ -46,7 +46,7 @@
     flex: 1;
     width: 100%;
     height: r(28);
-    padding: r(4);
+    padding: r(3);
     background: #f2f2f2;
     overflow: hidden;
   }
@@ -55,8 +55,8 @@
     position: absolute;
     left: 0;
     width: 100%;
-    height: r(20);
-    line-height: r(20);
+    height: r(22);
+    line-height: r(22);
     font-size: var(--search-bar-font-size);
     color: var(--color-text-placeholder);
 
@@ -66,12 +66,10 @@
       transform: translate3d(r(10), 0, 0);
     }
 
-    @include e(mock__placeholder) {
-      vertical-align: middle;
-    }
-
     @include b(icon) {
-      vertical-align: middle;
+      position: relative;
+      top: 50%;
+      transform: translateY(-50%);
       margin-right: r(2);
       font-size: var(--search-bar-icon-size);
       color: var(--color-text-placeholder);
@@ -94,8 +92,6 @@
       input {
         opacity: 1;
         padding: 0 r(28) 0 r(26);
-        height: r(20);
-        line-height: r(20);
       }
     }
   }
